--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;0,900;1,300&display=swap');
 
-$primary-color : #1F71BA;
-$secondary-color : #666666;
-$light-gray : #676767;
-$bg-primary : #fff;
+$primary-color: #1f71ba;
+$secondary-color: #666666;
+$light-gray: #676767;
+$bg-primary: #fff;
