--- a/src/pages/nftDetails.scss
+++ b/src/pages/nftDetails.scss
@@ -164,7 +164,7 @@ $primary-color: #e95b30;
   transform-origin: 40px 40px;
 }
 .lds-roller div:after {
-  content: " ";
+  content: ' ';
   display: block;
   position: absolute;
   width: 7px;
