--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -2,3 +2,6 @@
 @use './footer';
 @use './flagship-card';
 @use './top-collections-card';
+@use './trending-card';
+@use './Slider';
+@use './collections-table';
