--- a/src/styles/pages/home/index.scss
+++ b/src/styles/pages/home/index.scss
@@ -1,3 +1,5 @@
 @use "./_flagship-section.scss";
 @use "./dividing-section.scss";
 @use "./top-collections-section";
+@use "./trend-collection-section";
+@use "./all-collections-table-section";
