--- a/src/styles/pages/home/_dividing-section.scss
+++ b/src/styles/pages/home/_dividing-section.scss
@@ -1,47 +1,40 @@
 @import '../../variables.scss';
 
-.dividing-section{
+.dividing-section {
+  display: flex;
+  justify-content: center;
+  margin: 3rem 0;
 
-	display: flex;
-	justify-content: center;
-	margin: 3rem 0;
-	.divider{
-
-		margin: 0 auto;
-		border-top: 3px solid #EBEBEB ;
-		border-bottom: 3px solid #EBEBEB;
-		h1{
-		font-size: 3rem;
-		color:  $primary-color;
-		margin: 10px 0;
-	}
-	}
+  .divider {
+    width: 50%;
+    border-top: 3px solid #ebebeb;
+    border-bottom: 3px solid #ebebeb;
+    h1 {
+      font-size: 3rem;
+      color: $primary-color;
+      margin: 10px 0;
+      text-align: center;
+    }
+  }
 }
-
 
 @media screen and (max-width: 993px) {
-	.dividing-section{
-		
-		.divider{
-			
-			h1{	
-				font-weight: 500;
-				font-size: 2rem;
-			}
-		}
-	}
+  .dividing-section {
+    .divider {
+      h1 {
+        font-weight: 500;
+        font-size: 2rem;
+      }
+    }
+  }
 }
 
-
-@media screen and (max-width: 576px){
-	.dividing-section{
-		
-		.divider{
-			
-			h1{
-				
-				font-size: 1.5rem;
-			}
-		}
-	}	
+@media screen and (max-width: 576px) {
+  .dividing-section {
+    .divider {
+      h1 {
+        font-size: 1.5rem;
+      }
+    }
+  }
 }
