WG-36 collection details design

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,7 +1,14 @@
 @use './header';
 @use './footer';
+
+@use './dark-primary-btn';
+@use './light-primary-btn';
+
 @use './flagship-card';
 @use './top-collections-card';
 @use './trending-card';
 @use './Slider';
 @use './collections-table';
+
+@use './collection-stats';
+@use './collection-asset-card';
