--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
 @use './index.scss';
 @use './components/index.scss' as components;
 @use './pages/home/index.scss' as home;
+@use './pages/collection/index.scss' as collectionDetails;
