--- a/src/styles/pages/collection/_collection-assets.scss
+++ b/src/styles/pages/collection/_collection-assets.scss
@@ -1,26 +1,27 @@
 @import '../../variables.scss';
 
 .collection-assets-container {
-  width: 100vw;
   display: flex;
   padding: 1rem 2rem;
 
   .collection-assets {
-    width: 80%;
+    width: 100%;
     margin-left: 10px;
-
+    padding-left: 2rem;
+    flex: 1 0 0%;
     .assets-header {
       width: 100%;
-      height: 100px;
+      margin: 1rem 0;
       display: flex;
-      padding: 0 1rem;
       justify-content: space-between;
 
       .assets-sort {
-        width: 50%;
+        width: 60%;
         display: flex;
         align-items: center;
-
+        .sort-elements {
+          display: flex;
+        }
         p {
           color: $primary-color;
           margin: 0;
@@ -28,7 +29,7 @@
         }
 
         select {
-          width: 300px;
+          width: 250px;
           padding: 0.5rem;
           border-radius: 9px;
           margin-right: 1rem;
@@ -55,7 +56,7 @@
       }
 
       .assets-pagination {
-        width: 50%;
+        width: 40%;
         display: flex;
         align-items: center;
         justify-content: end;
@@ -88,8 +89,8 @@
 
   .assets-container {
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 1.4rem;
   }
 }
 
@@ -98,7 +99,7 @@
 }
 
 .search-filters {
-  width: 20%;
+  width: 300px;
   border: 1px solid #aaaaaa;
   max-height: 640px;
   overflow: hidden;
@@ -120,6 +121,90 @@
       font-size: 25px;
       &:last-child {
         border-top: 1px solid #aaaaaa;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .collection-assets-container {
+    .collection-assets {
+      margin: 0;
+      padding: 0;
+    }
+    .assets-container {
+      width: 100%;
+      .asset {
+        width: 280px;
+      }
+    }
+  }
+
+  .search-filters {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 993px) {
+  .collection-assets-container {
+    .collection-assets {
+      .assets-header {
+        flex-direction: column;
+
+        .assets-sort {
+          width: 100%;
+          justify-content: center;
+        }
+
+        .assets-pagination {
+          align-self: flex-end;
+        }
+      }
+    }
+
+    .assets-container {
+      .asset {
+        width: 250px;
+      }
+    }
+  }
+}
+
+// //small screens
+@media screen and (max-width: 576px) {
+  .collection-assets-container {
+    .collection-assets {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .assets-header {
+        margin: 0.5rem 0;
+
+        .assets-sort {
+          display: flex;
+          flex-direction: column;
+
+          .sort-elements {
+            width: 100%;
+            margin: 1rem 0;
+            display: flex;
+            align-items: center;
+          }
+        }
+
+        .assets-pagination {
+          width: 100%;
+          button {
+            padding: 0.5rem 1rem;
+          }
+        }
+      }
+    }
+
+    .assets-container {
+      .asset {
+        width: 100%;
       }
     }
   }
