--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,3 +2,4 @@
 @use './components/index.scss' as components;
 @use './pages/home/index.scss' as home;
 @use './pages/collection/index.scss' as collectionDetails;
+@use './pages/Search/index.scss' as search;
