--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;0,900;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@502;600;800;900&display=swap');
 
 $primary-color: #1f71ba;
 $secondary-color: #666666;
 $light-gray: #676767;
 $bg-primary: #fff;
+
+$secondary-color-hover: #585858;
 
 $default-font: 'Raleway', sans-serif;
