--- a/src/styles/components/_drop-down-collections.scss
+++ b/src/styles/components/_drop-down-collections.scss
@@ -1,7 +1,7 @@
 @import '../variables.scss';
 
 .drop-down-collections {
-  width: 300px;
+  width: 350px;
   margin: 0 3rem;
   overflow: auto;
 
@@ -26,7 +26,7 @@
       width: 100%;
       gap: 0.5rem;
       p {
-        color: rgb(128, 127, 127);
+        color: $secondary-color;
         margin: 0;
         font-weight: 500;
       }
