--- a/src/styles/components/_asset-result-card.scss
+++ b/src/styles/components/_asset-result-card.scss
@@ -36,11 +36,18 @@
             display: flex;
             flex-direction: column;
 
-            p {
-              font-weight: 600;
-              font-size: 20px;
-              color: #686767;
-              margin: 0;
+            a {
+              text-decoration: none;
+              p {
+                font-weight: 600;
+                font-size: 20px;
+                color: #686767;
+                margin: 0;
+
+                &:hover {
+                  color: $secondary-color-hover;
+                }
+              }
             }
 
             small {
