--- a/src/styles/pages/Search/index.scss
+++ b/src/styles/pages/Search/index.scss
@@ -136,6 +136,26 @@
   .results {
     display: flex;
     gap: 5rem;
+
+    .no-items-found-container {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      padding: 5rem 0;
+      .no-items-found {
+        width: 500px;
+        height: 200px;
+        border: 1px solid #adadad;
+        border-radius: 5px;
+        box-shadow: rgb(0 0 0 / 16%) 0px 4px 16px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
     .all-results {
       width: 80%;
     }
