--- a/src/styles/components/_nft-search-bar.scss
+++ b/src/styles/components/_nft-search-bar.scss
@@ -46,6 +46,13 @@
       display: flex;
       justify-content: space-around;
       padding: 1rem;
+
+      .drop-down-no-results {
+        height: 630px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
 
     .drop-down-footer {
