--- a/src/styles/pages/collection/_collection-assets.scss
+++ b/src/styles/pages/collection/_collection-assets.scss
@@ -91,6 +91,13 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1.4rem;
+
+    .loader-assets {
+      width: 100%;
+      height: 1118px;
+      display: flex;
+      justify-content: center;
+    }
   }
 }
 
