--- a/src/styles/pages/collection/_collection-header.scss
+++ b/src/styles/pages/collection/_collection-header.scss
@@ -7,6 +7,12 @@
       height: 200px;
       margin-bottom: 1.3rem;
 
+      .banner-loader {
+        width: 100%;
+        height: 200px;
+        background-color: #dbdbdbaa;
+      }
+
       img {
         object-fit: cover;
         width: 100%;
@@ -80,13 +86,18 @@
             display: flex;
             align-items: center;
             margin-right: 2rem;
-            svg {
-              color: $primary-color;
-              margin-right: 0.5rem;
-            }
 
-            small {
-              color: $secondary-color;
+            a {
+              text-decoration: none;
+
+              svg {
+                color: $primary-color;
+                margin-right: 0.5rem;
+              }
+
+              small {
+                color: $secondary-color;
+              }
             }
           }
         }
