--- a/src/styles/components/_collections-table.scss
+++ b/src/styles/components/_collections-table.scss
@@ -28,6 +28,27 @@
       }
     }
 
+    .table-loader {
+      height: 551px;
+
+      .MuiLinearProgress-colorPrimary {
+        background-color: #6fb1eb;
+        .MuiLinearProgress-barColorPrimary {
+          background-color: $primary-color;
+        }
+      }
+    }
+
+    .no-data-table {
+      min-height: 100px;
+      display: flex;
+      align-items: center;
+      h1 {
+        margin: 0;
+        color: $primary-color;
+      }
+    }
+
     .rdt_TableHead {
       .rdt_TableHeadRow {
         .rdt_TableCol {
@@ -52,15 +73,22 @@
         border-bottom-width: 1px;
         border-bottom-color: rgba(0, 0, 0, 0.12);
       }
-      .table-collection-info {
-        display: flex;
-        align-items: center;
+      a {
+        color: $primary-color;
+        .table-collection-info {
+          display: flex;
+          align-items: center;
 
-        img {
-          width: 25px;
-          height: 25px;
-          border-radius: 50%;
-          margin-right: 1px;
+          img {
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            margin-right: 1px;
+          }
+        }
+
+        &:hover {
+          color: #1962a1;
         }
       }
 
