--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,13 +1,17 @@
 @import '../variables.scss';
 
-.header {
-  background-color: $bg-primary;
+.header-container {
   position: sticky;
-  width: 100%;
-  height: 70px;
-  box-shadow: 0px 0px 5px #000;
   top: 0;
   z-index: 200;
+}
+
+.header {
+  background-color: $bg-primary;
+
+  width: 100%;
+  height: 70px;
+
   display: flex;
   justify-content: space-between;
   color: $secondary-color;
