--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,6 @@ $secondary-color: #666666;
 $light-gray: #676767;
 $bg-primary: #fff;
 
-$secondary-color-hover: #585858;
+$secondary-color-hover: #4b4a4a;
 
 $default-font: 'Raleway', sans-serif;
