--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -9,7 +9,7 @@
   display: flex;
   font-family: $default-font;
   gap: 1rem;
-
+  max-height: 1000px;
   .asset-detail-modal-info {
     width: 400px;
     border: 2px solid rgba(209, 213, 219, 1);
@@ -25,6 +25,7 @@
     }
     img {
       width: 100%;
+      height: 100%;
     }
 
     p {
@@ -169,6 +170,31 @@
           }
         }
       }
+    }
+  }
+}
+
+// @media screen and (max-width: 1200px) {
+
+// }
+
+@media screen and (max-width: 768px) {
+  .asset-detail-modal-body {
+    flex-direction: column;
+    overflow-y: auto;
+    .asset-detail-modal-info {
+      width: 300px;
+    }
+  }
+}
+
+// //small screens
+@media screen and (max-width: 576px) {
+  .asset-detail-modal-body {
+    flex-direction: column;
+    overflow-y: auto;
+    .asset-detail-modal-info {
+      width: 300px;
     }
   }
 }
