--- a/src/styles/components/_drop-down-assets.scss
+++ b/src/styles/components/_drop-down-assets.scss
@@ -64,3 +64,10 @@
     }
   }
 }
+
+@media screen and (max-width: 576px) {
+  .drop-down-assets {
+    width: auto;
+    margin-bottom: 0.8rem;
+  }
+}
