--- a/src/styles/pages/Search/index.scss
+++ b/src/styles/pages/Search/index.scss
@@ -32,9 +32,10 @@
     display: flex;
     align-items: center;
     border: none;
-    width: 100%;
+    width: calc(90vw - 20px);
     ul {
       margin: 1.5rem 0;
+      padding-left: 0;
       display: flex;
       align-items: center;
       list-style: none;
@@ -48,9 +49,14 @@
         color: $primary-color;
         margin-right: 2.5rem;
         border-bottom: 1px solid transparent;
+        white-space: nowrap;
 
         &:hover {
           border-bottom: 1px solid $primary-color;
+
+          &:last-child {
+            border-bottom: none;
+          }
         }
       }
     }
@@ -164,6 +170,178 @@
       width: 30%;
       display: flex;
       justify-content: center;
+    }
+
+    .mobile-match {
+      display: none;
+    }
+  }
+}
+
+// @media screen and (max-width: 1200px) {
+
+// }
+
+@media screen and (max-width: 993px) {
+  .full-search-container {
+    .full-search-header {
+      justify-content: center;
+      flex-wrap: wrap;
+      h1 {
+        strong {
+          font-weight: 400;
+          color: $primary-color;
+        }
+        color: $secondary-color;
+        margin-right: 1rem;
+      }
+
+      input {
+        width: 450px;
+      }
+
+      small {
+        margin-left: 5px;
+        align-self: flex-end;
+        color: #bbbbbb;
+      }
+    }
+
+    .search-filters {
+      ul {
+        .active {
+        }
+
+        li {
+        }
+      }
+
+      .toggle-tools {
+        p {
+        }
+      }
+    }
+
+    .results {
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      .no-items-found-container {
+        .no-items-found {
+        }
+      }
+
+      .all-results {
+        width: 100%;
+      }
+
+      .mobile-match {
+        margin-top: 3rem;
+        display: block;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+      }
+      .desktop-match {
+        display: none;
+      }
+
+      .match-found {
+      }
+
+      .no-items-found-container {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        padding: 5rem 2rem;
+        .no-items-found {
+          width: 100%;
+          height: 200px;
+          border: 1px solid #adadad;
+          border-radius: 5px;
+          box-shadow: rgb(0 0 0 / 16%) 0px 4px 16px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+
+          h3 {
+            text-align: center;
+            padding: 0.3rem;
+            font: 10vw;
+          }
+        }
+      }
+    }
+  }
+}
+
+//small screens
+@media screen and (max-width: 576px) {
+  .full-search-container {
+    .full-search-header {
+      justify-content: center;
+      flex-wrap: wrap;
+      h1 {
+        strong {
+          font-weight: 400;
+          color: $primary-color;
+        }
+        color: $secondary-color;
+        margin-right: 1rem;
+      }
+
+      input {
+        width: 450px;
+      }
+
+      small {
+        margin-left: 5px;
+        align-self: flex-end;
+        color: #bbbbbb;
+      }
+    }
+
+    .search-filters {
+      ul {
+        .active {
+        }
+
+        li {
+        }
+      }
+
+      .toggle-tools {
+        p {
+        }
+      }
+    }
+
+    .results {
+      flex-direction: column;
+      align-items: center;
+      .no-items-found-container {
+        .no-items-found {
+        }
+      }
+
+      .all-results {
+        width: 100%;
+      }
+
+      .mobile-match {
+        display: flex;
+        justify-content: center;
+      }
+
+      .desktop-match {
+        display: none;
+      }
+
+      .match-found {
+        width: 100%;
+      }
     }
   }
 }
