--- a/src/styles/pages/Search/index.scss
+++ b/src/styles/pages/Search/index.scss
@@ -5,20 +5,18 @@
   padding: 2rem;
   .full-search-header {
     display: flex;
-    h1 {
-      font-weight: 400;
-      margin: 0;
-      align-self: flex-end;
-      strong {
-        font-weight: 400;
-        color: $primary-color;
-      }
-      color: $secondary-color;
+
+    align-items: flex-end;
+    img {
+      width: 230px;
+      height: 100%;
+      object-fit: contain;
       margin-right: 1rem;
     }
 
     input {
       width: 450px;
+      height: 52px;
     }
 
     small {
@@ -185,15 +183,11 @@
 @media screen and (max-width: 993px) {
   .full-search-container {
     .full-search-header {
-      justify-content: center;
-      flex-wrap: wrap;
-      h1 {
-        strong {
-          font-weight: 400;
-          color: $primary-color;
-        }
-        color: $secondary-color;
-        margin-right: 1rem;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      img {
+        margin-bottom: 0.7rem;
       }
 
       input {
@@ -202,8 +196,7 @@
 
       small {
         margin-left: 5px;
-        align-self: flex-end;
-        color: #bbbbbb;
+        align-self: inherit;
       }
     }
 
@@ -281,25 +274,8 @@
 @media screen and (max-width: 576px) {
   .full-search-container {
     .full-search-header {
-      justify-content: center;
-      flex-wrap: wrap;
-      h1 {
-        strong {
-          font-weight: 400;
-          color: $primary-color;
-        }
-        color: $secondary-color;
-        margin-right: 1rem;
-      }
-
       input {
-        width: 450px;
-      }
-
-      small {
-        margin-left: 5px;
-        align-self: flex-end;
-        color: #bbbbbb;
+        width: 70vw;
       }
     }
 
