--- a/src/styles/pages/home/_nft-search-section.scss
+++ b/src/styles/pages/home/_nft-search-section.scss
@@ -9,14 +9,14 @@
   height: 40vh;
   font-family: $default-font;
 
-  h1 {
-    font-weight: 400;
-    strong {
-      color: $primary-color;
-      font-weight: 400;
+  .search-section-logo {
+    width: auto;
+    height: 100px;
+    margin-bottom: 1.5rem;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
-    color: $secondary-color;
-    margin: 0;
-    margin-bottom: 10px;
   }
 }
