--- a/src/styles/components/_collection-asset-card.scss
+++ b/src/styles/components/_collection-asset-card.scss
@@ -4,7 +4,7 @@ a {
   text-decoration: none;
 
   .collection-asset-card {
-    width: 230px;
+    width: 100%;
     border: 1px solid #e3e3e6;
     padding: 0.8rem;
     border-radius: 10px;
