--- a/src/styles/pages/collection/_collection-header.scss
+++ b/src/styles/pages/collection/_collection-header.scss
@@ -2,6 +2,7 @@
 
 .collection-container {
   .collection-header {
+    margin-top: 2rem;
     .collection-banner {
       width: 100%;
       height: 200px;
@@ -22,7 +23,7 @@
 
     .collection-header-info {
       width: 100%;
-      padding: 0 3rem;
+      padding: 0 2rem;
       display: flex;
 
       .left-section {
@@ -41,10 +42,11 @@
             justify-content: space-between;
 
             img {
-              width: 60px;
-              height: 60px;
+              width: auto;
+              height: 80px;
               border-radius: 50%;
               margin-right: 15px;
+              object-fit: cover;
             }
 
             p {
