--- a/src/styles/components/_asset-detail-modal.scss
+++ b/src/styles/components/_asset-detail-modal.scss
@@ -23,9 +23,16 @@
       font-weight: 600;
       font-size: 18px;
     }
-    img {
+
+    .animation {
       width: 100%;
       height: 100%;
+    }
+
+    .img {
+      width: 100%;
+      height: 100%;
+      cursor: zoom-in;
     }
 
     p {
