--- a/src/styles/components/_collection-asset-card.scss
+++ b/src/styles/components/_collection-asset-card.scss
@@ -5,7 +5,7 @@ a {
 
   .collection-asset-card {
     width: 100%;
-    border: 1px solid #e3e3e6;
+    border: 1px solid #f0f0f1;
     padding: 0.8rem;
     border-radius: 10px;
     cursor: pointer;
